# AirStack

./: .env  .gitignore  .gitmodules  .markdownlint.json  404.html  AGENTS.md  AirStack_Issue345_GPS_Degradation_Feasibility.md  CHANGELOG.md  CLAUDE.md  CNAME  DOCKER_RESTRUCTURE_SUMMARY.md  Dockerfile.airstack-cli  README.md  airstack  airstack.sh  airstack_gps_degradation_design_plan.md  config.toml  configure.sh  docker-compose.hitl.yaml  docker-compose.yaml  index.html  launch.sh  livox_mimic.yaml  mkdocs.yml  shutdown.sh  stylesheets  versions.json
.agents/: README.md
.agents/skills/add-ros2-package/assets/package_template/: CMakeLists.txt  README.md  package.xml  setup.py
.agents/skills/add-ros2-package/assets/package_template/config/: template.yaml
.agents/skills/add-ros2-package/assets/package_template/launch/: template.launch.xml
.agents/skills/add-ros2-package/assets/package_template/src/: template_node.cpp
.agents/skills/add-ros2-package/assets/package_template/your_package_name/: __init__.py  template_node.py
0.11.0/: 404.html  (+1 more)
0.13.0/common/ros_packages/rqt_behavior_tree/: package.xml
common/ros_packages/airstack_common/: CMakeLists.txt  package.xml
common/ros_packages/airstack_common/include/airstack_common/: ros2_helper.hpp  templib.hpp  vislib.hpp
common/ros_packages/airstack_common/src/: ros2_helper.cpp  templib.cpp  tflib.cpp  vislib.cpp
common/ros_packages/airstack_msgs/: CMakeLists.txt  package.xml
common/ros_packages/airstack_msgs/msg/: BeliefMapData.msg  GlobalPlanRequest.msg  KeepOutZone.msg  PlanRequest.msg  TaskAssignment.msg
common/ros_packages/airstack_msgs/srv/: PlanToWaypoint.srv  RobotCommand.srv  TrajectoryMode.srv
common/ros_packages/coordination/coordination_bringup/: package.xml  setup.py
common/ros_packages/coordination/coordination_bringup/config/: gcs_gossip_dds_router.yaml  gossip_dds_router.yaml  gossip_payloads.yaml
common/ros_packages/coordination/coordination_bringup/coordination_bringup/: frame_utils.py  gossip_node.py  peer_profile.py  peer_registry_monitor.py
common/ros_packages/coordination/coordination_bringup/launch/: gcs_gossip_bridge.launch.py  gossip.launch.xml
common/ros_packages/coordination/coordination_bringup/scripts/: gossip_node  peer_registry_monitor  peer_registry_monitor.py
common/ros_packages/coordination/coordination_msgs/: CMakeLists.txt
common/ros_packages/coordination/coordination_msgs/msg/: PeerProfile.msg
common/ros_packages/desktop_bringup/: CMakeLists.txt  package.xml  robot_1_semantic_ray_transposer.py  robot_2_filtered_ray_transposer.py
common/ros_packages/desktop_bringup/config/: core.perspective
common/ros_packages/desktop_bringup/launch/: gcs.launch.xml  robot.launch.xml
common/ros_packages/desktop_bringup/params/: domain_bridge.yaml
common/ros_packages/desktop_bringup/rviz/: robot.rviz  robot_1.rviz  robot_2.rviz
common/ros_packages/gui/rviz/3d_waypoint_rviz2_plugin/: .gitignore  CMakeLists.txt  README.md  plugin_description.xml
common/ros_packages/gui/rviz/3d_waypoint_rviz2_plugin/launch/: rviz2.launch.py
common/ros_packages/gui/rviz/rviz_behavior_tree_panel/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
common/ros_packages/gui/rviz/rviz_tasks_panel/: CMakeLists.txt  README.md  package.xml
common/ros_packages/msgs/task_msgs/: CMakeLists.txt  package.xml
common/ros_packages/msgs/task_msgs/action/: ChatTask.action  CoverageTask.action  FixedTrajectoryTask.action  LandTask.action  NavigateTask.action  ObjectCountingTask.action  ObjectSearchTask.action  SemanticSearchTask.action
common/ros_packages/rviz_behavior_tree_panel/: .clang-format  CMakeLists.txt  README.md  package.xml  rviz_common_plugins.xml
common/ros_packages/rviz_behavior_tree_panel/include/rviz_behavior_tree_panel/: behavior_tree_panel.hpp
common/ros_packages/rviz_behavior_tree_panel/include/rviz_panel_tutorial/: demo_panel.hpp
common/ros_packages/rviz_behavior_tree_panel/scripts/: simple_test_publisher.py  test_behavior_tree_publisher.py
common/ros_packages/rviz_behavior_tree_panel/src/: behavior_tree_panel.cpp  demo_panel.cpp
gcs/ros_ws/src/gcs_visualizer/: package.xml  setup.cfg  setup.py
gcs/ros_ws/src/gcs_visualizer/annotations/: AbandonedCity.json  AbandonedFactory.json  ConstructionSite.json  DowntownWest.json  FireAcademy.json  MilitaryBase.json  ModernCityDowntown.json  RetroNeighborhood.json  Shipyard.json  SnowyVillage.json
gcs/ros_ws/src/gcs_visualizer/gcs_visualizer/: annotation_tuner.py  annotation_viz_node.py  foxglove_visualizer_node.py  gcs_utils.py  payload_visualizer_node.py  polygon_collector_node.py  robot_marker_node.py  waypoint_collector_node.py
gcs/ros_ws/src/gcs_visualizer/launch/: gcs_visualizer.launch.xml
gcs/ros_ws/src/mission_manager/: CMakeLists.txt
main/ground_control_station/ros_ws/src/mission_manager/: index.html  package.xml
robot/autonomy/controls/px4_interface/: CMakeLists.txt  package.xml  plugins.xml
robot/autonomy/controls/px4_interface/src/: px4_interface.cpp
robot/ros_ws/src/behavior/drone_safety_monitor/: CMakeLists.txt  package.xml
robot/ros_ws/src/interface/px4_interface/: CMakeLists.txt  package.xml  plugins.xml
robot/ros_ws/src/perception/natnet_ros2/: .gitignore  CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/sensors/lidar_point_cloud_filter/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/airstack_common/: CMakeLists.txt  package.xml
ros_ws/src/airstack_common/include/airstack_common/: ros2_helper.hpp  tflib.hpp
ros_ws/src/airstack_common/launch/: odometry_conversion.xml
ros_ws/src/airstack_common/scripts/: odom_repub.py
ros_ws/src/airstack_common/src/: odometry_conversion.cpp  tflib.cpp
ros_ws/src/autonomy/autonomy_bringup/: CMakeLists.txt
ros_ws/src/autonomy/autonomy_bringup/config/: onboard_single_robot.rviz
ros_ws/src/autonomy/autonomy_bringup/launch/: interpolate_domain_bridge.launch.py  robot.launch.xml
ros_ws/src/autonomy/behavior/rqt_behavior_tree_command/: package.xml
ros_ws/src/autonomy/interface/drone_safety_monitor/: CMakeLists.txt
(+4187 files in other folders)
