<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_behavior_tree_panel</name>
  <version>0.0.0</version>
  <description>RViz Panel for Behavior Tree Visualization</description>
  <maintainer email="airlab@cmu.edu">AirLab - Carnegie Mellon University</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>behavior_tree_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
