<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_tasks_panel</name>
  <version>0.0.0</version>
  <description>RViz2 Panel for dispatching and monitoring task action goals</description>
  <maintainer email="ajong@andrew.cmu.edu">andrew</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>task_msgs</depend>
  <depend>airstack_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rviz_polygon_selection_tool</depend>
  <depend>waypoint_rviz2_plugin</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
