<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_interface</name>
  <version>0.0.0</version>
  <description>
    RobotInterface plugin that interfaces directly with PX4 via uXRCE-DDS
    ROS topics, bypassing MAVROS.  Handles ENU↔NED and FLU↔FRD frame
    conversions for all control and odometry messages.
  </description>
  <maintainer email="uav@todo.todo">uav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>robot_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
